[package]
name = "mutiny"
version = "0.2.0"
license = "MIT"
authors = ["Sam Clements <sam@borntyping.co.uk>"]
description = "Some simple tools that can be used to test process monitoring systems"
repository = "https://github.com/borntyping/mutiny"

[dependencies]
docopt = "^0.6.50"
docopt_macros = "^0.6.50"
log = "^0.3.0"
psutil = "^0.7.0"
rustc-serialize = "^0.3.3"
simple_logger = "^0.3.0"

[dependencies.riemann_client]
git = "https://github.com/borntyping/rust-riemann_client.git"
version = "^0.2.0"
