[package]
name = "mutiny"
version = "0.2.1"
license = "MIT"
authors = ["Sam Clements <sam@borntyping.co.uk>"]
description = "Some simple tools that can be used to test process monitoring systems"
repository = "https://github.com/borntyping/mutiny"

[dependencies]
docopt = "^0.6.55"
docopt_macros = "^0.6.55"
log = "^0.3.1"
psutil = "^0.8.2"
rustc-serialize = "^0.3.10"
simple_logger = "^0.3.1"

[dependencies.riemann_client]
git = "https://github.com/borntyping/rust-riemann_client.git"
version = "^0.3.0"
